@@ -26,6 +26,7 @@ New user-visible features
 - (wifi) Preamble detection can now be modelled and is enabled by default.
 - (wifi) 802.11ax spatial reuse is now supported.
 - (lte) Radio Link Failure (RLF) functionality is now supported.
+- (wifi) PhyRxPayloadBegin callback is triggered at the beginning of PSDU reception.
 
 Bugs fixed
 ----------
